cluster/apps/networking/traefik/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: networking
spec:
  type: ExternalName
  ports:
    - name: http
      port: 36587
  externalName: 10.2.0.10
